--- a/ParcelDelivery/app/src/main/res/layout/activity_userlist.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_userlist.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent" >
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonAddUser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Add User"
+        android:layout_marginBottom="16dp"
         android:onClick="toUserAdd"
+        android:text="Add User"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
