Clicking on ListView works fine

--- a/ParcelDelivery/app/src/main/res/layout/activity_useradd.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_useradd.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
-        android:id="@+id/spinnerPlacement"
+        android:id="@+id/spinnerPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -66,7 +66,7 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/spinnerPlacement"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerPosition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerPlacement" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerPosition" />
 
     <EditText
         android:id="@+id/textSurname"
