--- a/ParcelDelivery/app/src/main/res/layout/list_row.xml
+++ b/ParcelDelivery/app/src/main/res/layout/list_row.xml
@@ -5,28 +5,38 @@
     android:orientation="horizontal"
     android:padding="5dip" >
     <TextView
-        android:id="@+id/imie"
+        android:id="@+id/textListName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="17dp" />
     <TextView
-        android:id="@+id/nazwisko"
+        android:id="@+id/textListSurname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imie"
+        android:layout_toRightOf="@id/textListName"
+        android:layout_marginLeft="5dp"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:layout_toEndOf="@id/textListName" />
+    <TextView
+        android:id="@+id/textListEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textListName"
         android:layout_marginTop="7dp"
         android:textColor="#343434"
         android:textSize="14dp" />
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/textListPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imie"
+        android:layout_alignBottom="@+id/textListName"
         android:layout_alignParentRight="true"
         android:textColor="#343434"
         android:textSize="14dp" />
 
+    <!--Your comment
     <Button
         android:id="@+id/buttonDetails"
         style="@style/Widget.AppCompat.Button.Borderless"
@@ -35,5 +45,5 @@
         android:layout_below="@id/email"
         android:layout_alignTop="@id/imie"
         android:text="" />
-
+    -->
 </RelativeLayout>
