--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -4,4 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CoordinatorActivity"/>
+    tools:context=".CoordinatorActivity">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Koordynator"
+        tools:layout_editor_absoluteX="173dp"
+        tools:layout_editor_absoluteY="172dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
