--- a/ParcelDelivery/app/src/main/res/layout/activity_courier.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_courier.xml
@@ -11,6 +11,8 @@
         android:layout_width="130dp"
         android:layout_height="38dp"
         android:text="Kurier"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="119dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
