--- a/ParcelDelivery/app/src/main/res/layout/activity_manager.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_manager.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.manager.ManagerActivity">
 
     <Button
-        android:id="@+id/JEBANYPRZYCISK"
+        android:id="@+id/buttonUserList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
