--- a/ParcelDelivery/app/src/main/res/layout/activity_useradd.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_useradd.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Nr dowodu"
+        android:hint="@string/nr_dowodu"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Adres"
+        android:hint="@string/adres"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editTextPostal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/spinnerPosition"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:ems="10"
-        android:hint="Kod pocztowy"
+        android:hint="@string/kod_pocztowy"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/buttonResetPasswd"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="pesel"
+        android:hint="@string/pesel"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/editTextIdNum"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="Nazwisko"
+        android:hint="@string/nazwisko"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="8dp"
-        android:hint="Imię"
+        android:hint="@string/imie"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
