Struggling with Fragments and viewPager

--- a/ParcelDelivery/app/src/main/res/layout/activity_userdetails.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_userdetails.xml
@@ -260,6 +260,7 @@
         android:id="@+id/buttonTest"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/buttonResetPasswd"
         app:layout_constraintEnd_toStartOf="@+id/button4"
@@ -270,6 +271,7 @@
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/buttonRemoveAccount"
         app:layout_constraintEnd_toEndOf="parent"
