--- a/ParcelDelivery/app/src/main/res/layout/viewpager.xml
+++ b/ParcelDelivery/app/src/main/res/layout/viewpager.xml
@@ -4,19 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.viewpager.widget.ViewPager
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.viewpager.widget.PagerTabStrip
-            android:id="@+id/pager_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 
-    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
