--- a/ParcelDelivery/app/src/main/res/layout/viewpager.xml
+++ b/ParcelDelivery/app/src/main/res/layout/viewpager.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
