--- a/ParcelDelivery/app/src/main/res/layout/activity_userlist.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_userlist.xml
@@ -10,8 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:onClick="toUserAdd"
-        android:text="Add User"
+        android:text="@string/add_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
